# A-rust-Discord-Bot

./: Cargo.toml
src/: config.rs  main.rs
